<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTimeSheet.CreateTimeSheetFragment">

    <LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_time_sheet"
        android:gravity="center_horizontal"
        android:textSize="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp" />

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/code"
        android:gravity="center_horizontal"
        android:textSize="16dp"
        android:layout_marginTop="20dp"
        />

        <EditText
            android:id="@+id/code"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/encode_code"
            android:background="@drawable/border"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:gravity="center_horizontal"
            android:textSize="16dp"
            android:layout_marginTop="20dp"
            />

        <EditText
            android:id="@+id/description"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:hint="@string/encode_description"
            android:background="@drawable/border"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/country"
            android:gravity="center_horizontal"
            android:textSize="16dp"
            android:layout_marginTop="20dp"
            />

        <Spinner
            android:id="@+id/spinner_country"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:tooltipText="@string/country"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:id="@+id/layout_days"
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"/>
        <LinearLayout
            android:id="@+id/layout_day"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/border"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/monday"
                android:gravity="center_horizontal"
                android:textSize="16dp"
                android:layout_marginTop="10dp"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/attendance_type"
                    android:gravity="center_horizontal"
                    android:textSize="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    />
                <Spinner
                    android:id="@+id/spinner_attendance_type_day"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:tooltipText="@string/attendance_type"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/alarm_more_hours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ed0909"
                android:gravity="center_horizontal"
                android:text="@string/alarm_max_hour"
                android:visibility="gone"
                />

            <LinearLayout
                android:id="@+id/layout_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/number_hours"
                    android:gravity="center_horizontal"
                    android:textSize="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="45dp"
                    />

                <EditText
                    android:id="@+id/nb_hour_day"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/border"
                    android:hint="@string/zero"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textSize="20dp" />
            </LinearLayout>

            <TextView
                android:id="@+id/alarm_more_hours_hill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#ed0909"
                android:gravity="center_horizontal"
                android:text="@string/alarm_max_hour"
                android:visibility="gone"
                />
            <LinearLayout
                android:id="@+id/ifHill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/number_hours_work"
                    android:gravity="center_horizontal"
                    android:textSize="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="5dp"
                    />

                <EditText
                    android:id="@+id/nb_hour_day_hill"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/border"
                    android:hint="@string/zero"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:textSize="20dp" />
            </LinearLayout>
            <Button
                android:id="@+id/button_save_day"
                android:layout_width="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:text="@string/save_day"/>
        </LinearLayout>

        <Button
            android:id="@+id/button_create"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/create"/>

    </LinearLayout>
</ScrollView>